...
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tZu-nz-jXM" userLabel="acceptButton">
                            <rect key="frame" x="20" y="2" width="54" height="54"/>
                            <accessibility key="accessibilityConfiguration" identifier="assistant_view_accept"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="54" id="4WQ-mk-JlN"/>
...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="39" userLabel="loginButton" customClass="UIRoundBorderedButton">
                    <rect key="frame" x="40" y="301" width="299" height="40"/>
                    <accessibility key="accessibilityConfiguration" identifier="assistant_view_sip_login" label="Use SIP account">
                        <bool key="isElement" value="YES"/>
                    </accessibility>
...
            </subviews>
            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
            <accessibility key="accessibilityConfiguration" identifier="assistant_view"/>
            <constraints>
                <constraint firstItem="38" firstAttribute="leading" secondItem="39" secondAttribute="leading" id="23x-IR-Mtg"/>
...
                    <rect key="frame" x="38" y="153" width="298" height="30"/>
                    <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="assistant_login_view_username_field" label="Username"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="Xxt-U5-krh"/>
...
                    <rect key="frame" x="38" y="227" width="298" height="30"/>
                    <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="assistant_login_view_password_field" label="Password"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="ywR-ZJ-1YN"/>
...
                    <rect key="frame" x="38" y="301" width="298" height="30"/>
                    <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="assistant_login_view_domain_field" label="Domain"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="Evx-tD-kkq"/>
...
                    <segments>
                        <segment title="UDP"/>
                        <segment title="TCP"/>
                        <segment title="TLS"/>
                    </segments>
...
                <button opaque="NO" tag="130" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Ch-Ji-vjA" userLabel="loginButton" customClass="UIRoundBorderedButton">
                    <rect key="frame" x="38" y="516" width="298" height="40"/>
                    <accessibility key="accessibilityConfiguration" identifier="assistant_login_view_login" label="Login">
                        <bool key="isElement" value="YES"/>
                    </accessibility>
...
            </subviews>
            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
            <accessibility key="accessibilityConfiguration" identifier="assistant_login_view"/>
            <constraints>
                <constraint firstItem="tAv-f7-kDI" firstAttribute="leading" secondItem="56" secondAttribute="leading" constant="38" id="1fc-cF-x8o"/>
...
                    <rect key="frame" x="110" y="259" width="155" height="31"/>
                    <color key="backgroundColor" red="0.9497097135" green="0.27055108550000001" blue="0.030769694600000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <accessibility key="accessibilityConfiguration" identifier="assistant_login_warning_view_skip"/>
                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <state key="normal" title="Button"/>
...
            </subviews>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <accessibility key="accessibilityConfiguration" identifier="assistant_login_warning_view"/>
            <constraints>
                <constraint firstItem="gol-XQ-ghT" firstAttribute="top" secondItem="gPg-U6-Op5" secondAttribute="bottom" constant="20" id="BHO-FK-4Y0"/>
...
