<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UICompositeView">
            <connections>
                <outlet property="detailsView" destination="UhA-h1-Cu8" id="hQz-db-5Lg"/>
                <outlet property="landscapeView" destination="20" id="25"/>
                <outlet property="mainView" destination="15" id="kv5-r4-iMR"/>
                <outlet property="portraitView" destination="1" id="24"/>
                <outlet property="sideMenuView" destination="26" id="37"/>
                <outlet property="statusBarView" destination="14" id="jau-xd-cYL"/>
                <outlet property="tabBarView" destination="16" id="19"/>
                <outlet property="view" destination="1" id="3"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="1" userLabel="Portrait View">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
            <subviews>
                <view autoresizesSubviews="NO" tag="5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UhA-h1-Cu8" userLabel="detailsView">
                    <rect key="frame" x="187" y="42" width="187" height="559"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="details_view"/>
                    <gestureRecognizers/>
                </view>
                <view autoresizesSubviews="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="15" userLabel="mainView">
                    <rect key="frame" x="0.0" y="42" width="188" height="559"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="main_view"/>
                    <gestureRecognizers/>
                    <connections>
                        <outletCollection property="gestureRecognizers" destination="40" appends="YES" id="41"/>
                    </connections>
                </view>
                <view autoresizesSubviews="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="16" userLabel="tabBar">
                    <rect key="frame" x="0.0" y="601" width="375" height="66"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="tab_bar"/>
                </view>
                <view clearsContextBeforeDrawing="NO" tag="4" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="26" userLabel="sideMenuView">
                    <rect key="frame" x="-375" y="42" width="375" height="625"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                    <accessibility key="accessibilityConfiguration" identifier="side_menu_view"/>
                </view>
                <view autoresizesSubviews="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="14" userLabel="statusBar">
                    <rect key="frame" x="0.0" y="0.0" width="375" height="42"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <accessibility key="accessibilityConfiguration" identifier="status_bar"/>
                </view>
            </subviews>
            <viewLayoutGuide key="safeArea" id="JWS-o5-QR7"/>
            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
            <nil key="simulatedStatusBarMetrics"/>
            <point key="canvasLocation" x="-139.85507246376812" y="-17.075892857142858"/>
        </view>
        <view contentMode="scaleToFill" id="20" userLabel="Landscape View">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
            <subviews>
                <view autoresizesSubviews="NO" tag="5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vgs-Nv-m9Q" userLabel="detailsView">
                    <rect key="frame" x="379" y="42" width="0.0" height="625"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                </view>
                <view autoresizesSubviews="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="23" userLabel="mainView">
                    <rect key="frame" x="90" y="42" width="143" height="625"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                </view>
                <view autoresizesSubviews="NO" tag="3" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="21" userLabel="tabBar">
                    <rect key="frame" x="0.0" y="42" width="90" height="625"/>
                    <autoresizingMask key="autoresizingMask" heightSizable="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                </view>
                <view clearsContextBeforeDrawing="NO" tag="4" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JXU-o0-1po" userLabel="sideMenuView">
                    <rect key="frame" x="0.0" y="42" width="375" height="625"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                </view>
                <view autoresizesSubviews="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="22" userLabel="statusBar">
                    <rect key="frame" x="0.0" y="0.0" width="375" height="42"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                </view>
            </subviews>
            <viewLayoutGuide key="safeArea" id="M2K-Ww-Tkq"/>
            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
            <nil key="simulatedStatusBarMetrics"/>
            <point key="canvasLocation" x="655.79710144927537" y="-71.316964285714278"/>
        </view>
        <swipeGestureRecognizer direction="right" id="40">
            <connections>
                <action selector="onRightSwipe:" destination="-1" id="43"/>
                <outlet property="delegate" destination="-1" id="42"/>
            </connections>
        </swipeGestureRecognizer>
    </objects>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
